# ocpy04

./: .flake8  .gitignore  README.md  main.py  mock_up.txt  pyproject.toml  requirements.piptools  requirements.txt
.github/workflows/: test.yml
chess_tournament_manager/: README.md  __init__.py  __main__.py  main.py  mock_up.txt  pyproject.toml  requirements.txt
chess_tournament_manager.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
chess_tournament_manager/controllers/: __init__.py  main_controller.py  player_controller.py  tournament_controller.py
chess_tournament_manager/data/: players.json  tournaments.json
chess_tournament_manager/models/: data.py  match.py  player.py  round.py  tournament.py
chess_tournament_manager/utils/: __init__.py  check_choice.py  constant.py  print_success.py
chess_tournament_manager/views/: main_menu.py
chess_tournament_manager/views/match/: match_details.py
chess_tournament_manager/views/player/: create_player.py  player_list.py  player_menu.py
chess_tournament_manager/views/tournament/: create_tournament.py  tournament_details.py  tournament_list.py  tournament_menu.py
controllers/: __init__.py  main_controller.py
controllers/player/: player_controller.py
controllers/tournament/: tournament_controller.py
data/: players.json  tournaments.json
flake8-report/: index.html
models/: __init__.py  data.py  match.py  player.py  round.py  tournament.py
utils/: __init__.py  check_choice.py  constant.py  countdown.py  create_id.py  error_handler.py  print_error.py  print_success.py  print_title.py
views/: __init__.py  main_landing.py  main_menu.py
views/match/: match_details.py
views/player/: create_player.py  player_landing.py  player_list.py  player_menu.py
views/tournament/: create_tournament.py  in_progress_tournament.py  tournament_details.py  tournament_landing.py  tournament_list.py  tournament_menu.py
