[project]
name = "chess_tournament_manager"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "black>=25.1.0",
    "colorama>=0.4.6",
]

[tool.black]
line-length = 119
target-version = ['py312']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
